[package]
name = "time_varying_graph"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A complex graph package for interacting with time-varying graphs. For more information you can check out <https://arxiv.org/abs/1012.0009>"
repository = "https://github.com/zuper1998/allen_interval_algebra/"
keywords = ["math", "graph","interval", "time-varying-graph", "interval-graph"]

[dependencies]
allen_interval_algebra = "0.1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.96"
petgraph = "0.6.3"
log = "0.4.17"
json = "0.12.4"
indexmap = "1.9.3"
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"